Fix left margin on mobile and reposition prev button

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -772,11 +772,23 @@ header
     }
   }
 
+  .postCaption {
+    margin-left: 0%;
+  }
+
+  .postHeading {
+    margin-left: 0%;
+  }
+
   .commentBlock {
     width: 100%;
   }
 
   .commentTextArea {
     width: 100%;
+  }
+
+  .buffetPrevButton {
+    left: 3%;
   }
 }
